# HostsFileFixer

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  main.manifest
